# Vizz-DSL

./: .gitignore  LICENSE  README.md  komentari.txt  pyproject.toml  requirements.txt
extension/: language-configuration.json  package-lock.json  package.json  server.py  tsconfig.json  vizz-dsl-0.0.1.vsix
extension/snippets/: vizz-snippets.json
extension/src/: extension.ts
extension/syntaxes/: vizz.tmLanguage.json
src/vizz/: barplot.py  interpreter.py  kaggle.vizz  orders.vizz  pieplot.py  sales.vizz  vizz.tx
vizz/: executor.py  file.csv  interpreter.py  main.py  proba.py  pyproject.toml  sales.vizz  vizz.tx
vizz/src/vizz/: barplot.py  common.py  defaultplots.vizz  interpreter.py  kaggle.vizz  language.py  pieplot.py  sales.vizz  vizz.tx
